# src/roles/entities/role.entity.ts
@@ -1,5 +1,6 @@
+import { ClientEntity } from 'src/client/entities/client.entity';
 import { UserEntity } from 'src/user/entities/user.entity';
-import { Column, Entity, ManyToMany, PrimaryGeneratedColumn } from 'typeorm';
+import { Column, Entity, JoinColumn, ManyToMany, ManyToOne, PrimaryGeneratedColumn } from 'typeorm';
 
 @Entity('roles')
 export class RoleEntity {
@@ -13,7 +14,13 @@ export class RoleEntity {
   @Column({ type: 'json', default: [] })
   permissions: { controller: string; method: string }[];
 
+  @Column({ name: 'client_id', type: 'integer', nullable: true })
+  client_id?: number | null;
+
+  @ManyToOne(() => ClientEntity, client => client.roles, { onDelete: 'CASCADE', nullable: true })
+  @JoinColumn({ name: 'client_id' })
+  client?: ClientEntity | null;
+
   @ManyToMany(() => UserEntity, user => user.roles)
   users: UserEntity[];
-
 }
